--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     margin-top: 4%;
     position: fixed; 
     float: left;
-    width: 10%;
+    width: 11.5%;
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: space-around;
@@ -49,7 +49,8 @@ body{
 
 .select FORM input{
     float: left;
-    font-size: 50%;
+    font-size: 78%;
+    font-family: 'YuGothic','Yu Gothic', sans-serif;
     padding: 12% 0 12% 20%;
     border-radius: 10%;
     border: none;
